selfhost/test/typechecker/invocation_generics_error_inferred_from_ret.2.out
Error at %FILE_NAME%:3:28
Type mismatch
  |  val m: Map<String, Int>? = foo("a")
                                ^
Expected: Map<String, Int>?
but instead found: Map<String, String>?
